@@ -1,4 +1,4 @@
 DIST ZAAPlugins-2.12.tar.gz 2515506 RMD160 03a70b16466967a1842780a15b8866f8dfdecd68 SHA1 54ce79c3f9995e727fb99dad59f0a64a0b72fceb SHA256 8a8400f0139ef3e256d121ae1686b0e3012093f894917c9ba82dcaf85b60a983
-EBUILD zaaplugins-2.12.ebuild 878 RMD160 3057aa9e641b17781c7f1b5d2ba1f26ec4d0b970 SHA1 5975abbc397a4de4fb28c6c83a1bafbad39cc041 SHA256 d57e1f5045db904e767a434aceaa6cae47dede1441d58379302234a9c3f8ff25
-MISC ChangeLog 968 RMD160 dfa0f1e3876956e7fec00ecdbf6a7183741bcbc1 SHA1 b3319647e388196d38bd5cbb65f7dd06da4cd380 SHA256 76176e616962fcedcc63bd2c999f88f0989433f52652500ebc377e7ebf1d2a20
+EBUILD zaaplugins-2.12.ebuild 894 RMD160 7cc75dbce26bf11ea3c5d61b1d281391f7843245 SHA1 57ef310d0ab8d9be27959cca5c881603c2f80005 SHA256 a0f8170134392c10916d9a210d2f5a69240a7c33a36b6d38ba87f54ec710e3ac
+MISC ChangeLog 1072 RMD160 3080c2b02419ff2bd789c6c5807de831947d4dae SHA1 bd6bad8278aecd2829171466cfeada24df8b2cfb SHA256 01bc0da223c7f912498a0badddd9bbfead5e5e6350353e7e4a5e1217971fcfa3
 MISC metadata.xml 161 RMD160 5e136d45f811478292bd2ee1798a9b0229ffe468 SHA1 9755179a2dee0511818b1f6738ded28e335e1b9a SHA256 e69ac7205cbc2e42a297e20d8f08922003390a345bbf50ccf00d1158a1c97cc5
