@@ -1,6 +1,10 @@
 # ChangeLog for net-zope/zaaplugins
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zaaplugins/ChangeLog,v 1.6 2009/03/30 14:02:02 loki_val Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zaaplugins/ChangeLog,v 1.7 2010/02/10 22:45:55 ssuominen Exp $
+
+  10 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
+  zaaplugins-2.12.ebuild:
+  Fix poppler depend.
 
   30 Mar 2009; Peter Alfredsen <loki_val@gentoo.org> zaaplugins-2.12.ebuild:
   Update dependencies w.r.t. bug 264230, fully-split-out poppler transition.
